parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> statement statement
Rule 2     statement -> instruction
Rule 3     expression -> term
Rule 4     expression -> expression PLUS term
Rule 5     expression -> expression MINUS term
Rule 6     term -> factor
Rule 7     term -> term TIMES factor
Rule 8     term -> term DIVIDE factor
Rule 9     factor -> NUMBER
Rule 10    factor -> IDENTIFIER
Rule 11    factor -> LRB expression RRB
Rule 12    empty -> <empty>
Rule 13    assignment -> IDENTIFIER LSB assignment RSB
Rule 14    list -> LSB bare_list RSB
Rule 15    bare_list -> expression
Rule 16    bare_list -> bare_list COMMA expression
Rule 17    expression -> list
Rule 18    assignment -> assignment COMMA assignment
Rule 19    assignment -> empty
Rule 20    assignment -> NUMBER
Rule 21    assignment -> list
Rule 22    assignment -> IDENTIFIER
Rule 23    assignment -> IDENTIFIER ASSIGN expression
Rule 24    slice_predicate -> SLICE DOT NUMBER DOT
Rule 25    instruction -> slice_predicate CLAIM_BAR LRB assignment RRB
Rule 26    instruction -> slice_predicate SPM_ALOCATE LRB assignment RRB
Rule 27    instruction -> slice_predicate SPM_FREE LRB assignment RRB
Rule 28    tma_predicate -> TMA DOT
Rule 29    slice_suffix -> DOT SLICE DOT NUMBER
Rule 30    instruction -> tma_predicate LOAD slice_suffix LRB assignment RRB
Rule 31    instruction -> tma_predicate LOAD DOT MULTICAST LRB assignment RRB
Rule 32    instruction -> tma_predicate STORE slice_suffix LRB assignment RRB
Rule 33    instruction -> tma_predicate STORE DOT MULTICAST LRB assignment RRB
Rule 34    template_suffix -> DOUBLE_COLON LAB assignment RAB
Rule 35    template_suffix -> DOUBLE_COLON LAB NUMBER D RAB
Rule 36    instruction -> MAKE_TENSOR template_suffix LRB assignment RRB
Rule 37    instruction -> slice_predicate GEMM template_suffix LRB assignment RRB

Terminals, with rules where they appear

ASSIGN               : 23
CLAIM_BAR            : 25
COMMA                : 16 18
D                    : 35
DIVIDE               : 8
DOT                  : 24 24 28 29 29 31 33
DOUBLE_COLON         : 34 35
GEMM                 : 37
IDENTIFIER           : 10 13 22 23
LAB                  : 34 35
LOAD                 : 30 31
LRB                  : 11 25 26 27 30 31 32 33 36 37
LSB                  : 13 14
MAKE_TENSOR          : 36
MINUS                : 5
MULTICAST            : 31 33
NUMBER               : 9 20 24 29 35
PLUS                 : 4
RAB                  : 34 35
RRB                  : 11 25 26 27 30 31 32 33 36 37
RSB                  : 13 14
SLICE                : 24 29
SPM_ALOCATE          : 26
SPM_FREE             : 27
STORE                : 32 33
TIMES                : 7
TMA                  : 28
error                : 

Nonterminals, with rules where they appear

assignment           : 13 18 18 25 26 27 30 31 32 33 34 36 37
bare_list            : 14 16
empty                : 19
expression           : 4 5 11 15 16 23
factor               : 6 7 8
instruction          : 2
list                 : 17 21
slice_predicate      : 25 26 27 37
slice_suffix         : 30 32
statement            : 1 1 0
template_suffix      : 36 37
term                 : 3 4 5 7 8
tma_predicate        : 30 31 32 33

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . statement statement
    (2) statement -> . instruction
    (25) instruction -> . slice_predicate CLAIM_BAR LRB assignment RRB
    (26) instruction -> . slice_predicate SPM_ALOCATE LRB assignment RRB
    (27) instruction -> . slice_predicate SPM_FREE LRB assignment RRB
    (30) instruction -> . tma_predicate LOAD slice_suffix LRB assignment RRB
    (31) instruction -> . tma_predicate LOAD DOT MULTICAST LRB assignment RRB
    (32) instruction -> . tma_predicate STORE slice_suffix LRB assignment RRB
    (33) instruction -> . tma_predicate STORE DOT MULTICAST LRB assignment RRB
    (36) instruction -> . MAKE_TENSOR template_suffix LRB assignment RRB
    (37) instruction -> . slice_predicate GEMM template_suffix LRB assignment RRB
    (24) slice_predicate -> . SLICE DOT NUMBER DOT
    (28) tma_predicate -> . TMA DOT

    MAKE_TENSOR     shift and go to state 5
    SLICE           shift and go to state 6
    TMA             shift and go to state 7

    statement                      shift and go to state 1
    instruction                    shift and go to state 2
    slice_predicate                shift and go to state 3
    tma_predicate                  shift and go to state 4

state 1

    (0) S' -> statement .
    (1) statement -> statement . statement
    (1) statement -> . statement statement
    (2) statement -> . instruction
    (25) instruction -> . slice_predicate CLAIM_BAR LRB assignment RRB
    (26) instruction -> . slice_predicate SPM_ALOCATE LRB assignment RRB
    (27) instruction -> . slice_predicate SPM_FREE LRB assignment RRB
    (30) instruction -> . tma_predicate LOAD slice_suffix LRB assignment RRB
    (31) instruction -> . tma_predicate LOAD DOT MULTICAST LRB assignment RRB
    (32) instruction -> . tma_predicate STORE slice_suffix LRB assignment RRB
    (33) instruction -> . tma_predicate STORE DOT MULTICAST LRB assignment RRB
    (36) instruction -> . MAKE_TENSOR template_suffix LRB assignment RRB
    (37) instruction -> . slice_predicate GEMM template_suffix LRB assignment RRB
    (24) slice_predicate -> . SLICE DOT NUMBER DOT
    (28) tma_predicate -> . TMA DOT

    MAKE_TENSOR     shift and go to state 5
    SLICE           shift and go to state 6
    TMA             shift and go to state 7

    statement                      shift and go to state 8
    instruction                    shift and go to state 2
    slice_predicate                shift and go to state 3
    tma_predicate                  shift and go to state 4

state 2

    (2) statement -> instruction .

    MAKE_TENSOR     reduce using rule 2 (statement -> instruction .)
    SLICE           reduce using rule 2 (statement -> instruction .)
    TMA             reduce using rule 2 (statement -> instruction .)
    $end            reduce using rule 2 (statement -> instruction .)


state 3

    (25) instruction -> slice_predicate . CLAIM_BAR LRB assignment RRB
    (26) instruction -> slice_predicate . SPM_ALOCATE LRB assignment RRB
    (27) instruction -> slice_predicate . SPM_FREE LRB assignment RRB
    (37) instruction -> slice_predicate . GEMM template_suffix LRB assignment RRB

    CLAIM_BAR       shift and go to state 9
    SPM_ALOCATE     shift and go to state 10
    SPM_FREE        shift and go to state 11
    GEMM            shift and go to state 12


state 4

    (30) instruction -> tma_predicate . LOAD slice_suffix LRB assignment RRB
    (31) instruction -> tma_predicate . LOAD DOT MULTICAST LRB assignment RRB
    (32) instruction -> tma_predicate . STORE slice_suffix LRB assignment RRB
    (33) instruction -> tma_predicate . STORE DOT MULTICAST LRB assignment RRB

    LOAD            shift and go to state 13
    STORE           shift and go to state 14


state 5

    (36) instruction -> MAKE_TENSOR . template_suffix LRB assignment RRB
    (34) template_suffix -> . DOUBLE_COLON LAB assignment RAB
    (35) template_suffix -> . DOUBLE_COLON LAB NUMBER D RAB

    DOUBLE_COLON    shift and go to state 16

    template_suffix                shift and go to state 15

state 6

    (24) slice_predicate -> SLICE . DOT NUMBER DOT

    DOT             shift and go to state 17


state 7

    (28) tma_predicate -> TMA . DOT

    DOT             shift and go to state 18


state 8

    (1) statement -> statement statement .
    (1) statement -> statement . statement
    (1) statement -> . statement statement
    (2) statement -> . instruction
    (25) instruction -> . slice_predicate CLAIM_BAR LRB assignment RRB
    (26) instruction -> . slice_predicate SPM_ALOCATE LRB assignment RRB
    (27) instruction -> . slice_predicate SPM_FREE LRB assignment RRB
    (30) instruction -> . tma_predicate LOAD slice_suffix LRB assignment RRB
    (31) instruction -> . tma_predicate LOAD DOT MULTICAST LRB assignment RRB
    (32) instruction -> . tma_predicate STORE slice_suffix LRB assignment RRB
    (33) instruction -> . tma_predicate STORE DOT MULTICAST LRB assignment RRB
    (36) instruction -> . MAKE_TENSOR template_suffix LRB assignment RRB
    (37) instruction -> . slice_predicate GEMM template_suffix LRB assignment RRB
    (24) slice_predicate -> . SLICE DOT NUMBER DOT
    (28) tma_predicate -> . TMA DOT

  ! shift/reduce conflict for MAKE_TENSOR resolved as shift
  ! shift/reduce conflict for SLICE resolved as shift
  ! shift/reduce conflict for TMA resolved as shift
    $end            reduce using rule 1 (statement -> statement statement .)
    MAKE_TENSOR     shift and go to state 5
    SLICE           shift and go to state 6
    TMA             shift and go to state 7

  ! MAKE_TENSOR     [ reduce using rule 1 (statement -> statement statement .) ]
  ! SLICE           [ reduce using rule 1 (statement -> statement statement .) ]
  ! TMA             [ reduce using rule 1 (statement -> statement statement .) ]

    statement                      shift and go to state 8
    instruction                    shift and go to state 2
    slice_predicate                shift and go to state 3
    tma_predicate                  shift and go to state 4

state 9

    (25) instruction -> slice_predicate CLAIM_BAR . LRB assignment RRB

    LRB             shift and go to state 19


state 10

    (26) instruction -> slice_predicate SPM_ALOCATE . LRB assignment RRB

    LRB             shift and go to state 20


state 11

    (27) instruction -> slice_predicate SPM_FREE . LRB assignment RRB

    LRB             shift and go to state 21


state 12

    (37) instruction -> slice_predicate GEMM . template_suffix LRB assignment RRB
    (34) template_suffix -> . DOUBLE_COLON LAB assignment RAB
    (35) template_suffix -> . DOUBLE_COLON LAB NUMBER D RAB

    DOUBLE_COLON    shift and go to state 16

    template_suffix                shift and go to state 22

state 13

    (30) instruction -> tma_predicate LOAD . slice_suffix LRB assignment RRB
    (31) instruction -> tma_predicate LOAD . DOT MULTICAST LRB assignment RRB
    (29) slice_suffix -> . DOT SLICE DOT NUMBER

    DOT             shift and go to state 24

    slice_suffix                   shift and go to state 23

state 14

    (32) instruction -> tma_predicate STORE . slice_suffix LRB assignment RRB
    (33) instruction -> tma_predicate STORE . DOT MULTICAST LRB assignment RRB
    (29) slice_suffix -> . DOT SLICE DOT NUMBER

    DOT             shift and go to state 26

    slice_suffix                   shift and go to state 25

state 15

    (36) instruction -> MAKE_TENSOR template_suffix . LRB assignment RRB

    LRB             shift and go to state 27


state 16

    (34) template_suffix -> DOUBLE_COLON . LAB assignment RAB
    (35) template_suffix -> DOUBLE_COLON . LAB NUMBER D RAB

    LAB             shift and go to state 28


state 17

    (24) slice_predicate -> SLICE DOT . NUMBER DOT

    NUMBER          shift and go to state 29


state 18

    (28) tma_predicate -> TMA DOT .

    LOAD            reduce using rule 28 (tma_predicate -> TMA DOT .)
    STORE           reduce using rule 28 (tma_predicate -> TMA DOT .)


state 19

    (25) instruction -> slice_predicate CLAIM_BAR LRB . assignment RRB
    (13) assignment -> . IDENTIFIER LSB assignment RSB
    (18) assignment -> . assignment COMMA assignment
    (19) assignment -> . empty
    (20) assignment -> . NUMBER
    (21) assignment -> . list
    (22) assignment -> . IDENTIFIER
    (23) assignment -> . IDENTIFIER ASSIGN expression
    (12) empty -> .
    (14) list -> . LSB bare_list RSB

    IDENTIFIER      shift and go to state 31
    NUMBER          shift and go to state 34
    RRB             reduce using rule 12 (empty -> .)
    COMMA           reduce using rule 12 (empty -> .)
    LSB             shift and go to state 32

    assignment                     shift and go to state 30
    empty                          shift and go to state 33
    list                           shift and go to state 35

state 20

    (26) instruction -> slice_predicate SPM_ALOCATE LRB . assignment RRB
    (13) assignment -> . IDENTIFIER LSB assignment RSB
    (18) assignment -> . assignment COMMA assignment
    (19) assignment -> . empty
    (20) assignment -> . NUMBER
    (21) assignment -> . list
    (22) assignment -> . IDENTIFIER
    (23) assignment -> . IDENTIFIER ASSIGN expression
    (12) empty -> .
    (14) list -> . LSB bare_list RSB

    IDENTIFIER      shift and go to state 31
    NUMBER          shift and go to state 34
    RRB             reduce using rule 12 (empty -> .)
    COMMA           reduce using rule 12 (empty -> .)
    LSB             shift and go to state 32

    assignment                     shift and go to state 36
    empty                          shift and go to state 33
    list                           shift and go to state 35

state 21

    (27) instruction -> slice_predicate SPM_FREE LRB . assignment RRB
    (13) assignment -> . IDENTIFIER LSB assignment RSB
    (18) assignment -> . assignment COMMA assignment
    (19) assignment -> . empty
    (20) assignment -> . NUMBER
    (21) assignment -> . list
    (22) assignment -> . IDENTIFIER
    (23) assignment -> . IDENTIFIER ASSIGN expression
    (12) empty -> .
    (14) list -> . LSB bare_list RSB

    IDENTIFIER      shift and go to state 31
    NUMBER          shift and go to state 34
    RRB             reduce using rule 12 (empty -> .)
    COMMA           reduce using rule 12 (empty -> .)
    LSB             shift and go to state 32

    assignment                     shift and go to state 37
    empty                          shift and go to state 33
    list                           shift and go to state 35

state 22

    (37) instruction -> slice_predicate GEMM template_suffix . LRB assignment RRB

    LRB             shift and go to state 38


state 23

    (30) instruction -> tma_predicate LOAD slice_suffix . LRB assignment RRB

    LRB             shift and go to state 39


state 24

    (31) instruction -> tma_predicate LOAD DOT . MULTICAST LRB assignment RRB
    (29) slice_suffix -> DOT . SLICE DOT NUMBER

    MULTICAST       shift and go to state 40
    SLICE           shift and go to state 41


state 25

    (32) instruction -> tma_predicate STORE slice_suffix . LRB assignment RRB

    LRB             shift and go to state 42


state 26

    (33) instruction -> tma_predicate STORE DOT . MULTICAST LRB assignment RRB
    (29) slice_suffix -> DOT . SLICE DOT NUMBER

    MULTICAST       shift and go to state 43
    SLICE           shift and go to state 41


state 27

    (36) instruction -> MAKE_TENSOR template_suffix LRB . assignment RRB
    (13) assignment -> . IDENTIFIER LSB assignment RSB
    (18) assignment -> . assignment COMMA assignment
    (19) assignment -> . empty
    (20) assignment -> . NUMBER
    (21) assignment -> . list
    (22) assignment -> . IDENTIFIER
    (23) assignment -> . IDENTIFIER ASSIGN expression
    (12) empty -> .
    (14) list -> . LSB bare_list RSB

    IDENTIFIER      shift and go to state 31
    NUMBER          shift and go to state 34
    RRB             reduce using rule 12 (empty -> .)
    COMMA           reduce using rule 12 (empty -> .)
    LSB             shift and go to state 32

    assignment                     shift and go to state 44
    empty                          shift and go to state 33
    list                           shift and go to state 35

state 28

    (34) template_suffix -> DOUBLE_COLON LAB . assignment RAB
    (35) template_suffix -> DOUBLE_COLON LAB . NUMBER D RAB
    (13) assignment -> . IDENTIFIER LSB assignment RSB
    (18) assignment -> . assignment COMMA assignment
    (19) assignment -> . empty
    (20) assignment -> . NUMBER
    (21) assignment -> . list
    (22) assignment -> . IDENTIFIER
    (23) assignment -> . IDENTIFIER ASSIGN expression
    (12) empty -> .
    (14) list -> . LSB bare_list RSB

    NUMBER          shift and go to state 46
    IDENTIFIER      shift and go to state 31
    RAB             reduce using rule 12 (empty -> .)
    COMMA           reduce using rule 12 (empty -> .)
    LSB             shift and go to state 32

    assignment                     shift and go to state 45
    empty                          shift and go to state 33
    list                           shift and go to state 35

state 29

    (24) slice_predicate -> SLICE DOT NUMBER . DOT

    DOT             shift and go to state 47


state 30

    (25) instruction -> slice_predicate CLAIM_BAR LRB assignment . RRB
    (18) assignment -> assignment . COMMA assignment

    RRB             shift and go to state 48
    COMMA           shift and go to state 49


state 31

    (13) assignment -> IDENTIFIER . LSB assignment RSB
    (22) assignment -> IDENTIFIER .
    (23) assignment -> IDENTIFIER . ASSIGN expression

    LSB             shift and go to state 50
    RRB             reduce using rule 22 (assignment -> IDENTIFIER .)
    COMMA           reduce using rule 22 (assignment -> IDENTIFIER .)
    RAB             reduce using rule 22 (assignment -> IDENTIFIER .)
    RSB             reduce using rule 22 (assignment -> IDENTIFIER .)
    ASSIGN          shift and go to state 51


state 32

    (14) list -> LSB . bare_list RSB
    (15) bare_list -> . expression
    (16) bare_list -> . bare_list COMMA expression
    (3) expression -> . term
    (4) expression -> . expression PLUS term
    (5) expression -> . expression MINUS term
    (17) expression -> . list
    (6) term -> . factor
    (7) term -> . term TIMES factor
    (8) term -> . term DIVIDE factor
    (14) list -> . LSB bare_list RSB
    (9) factor -> . NUMBER
    (10) factor -> . IDENTIFIER
    (11) factor -> . LRB expression RRB

    LSB             shift and go to state 32
    NUMBER          shift and go to state 57
    IDENTIFIER      shift and go to state 58
    LRB             shift and go to state 59

    bare_list                      shift and go to state 52
    expression                     shift and go to state 53
    term                           shift and go to state 54
    list                           shift and go to state 55
    factor                         shift and go to state 56

state 33

    (19) assignment -> empty .

    RRB             reduce using rule 19 (assignment -> empty .)
    COMMA           reduce using rule 19 (assignment -> empty .)
    RAB             reduce using rule 19 (assignment -> empty .)
    RSB             reduce using rule 19 (assignment -> empty .)


state 34

    (20) assignment -> NUMBER .

    RRB             reduce using rule 20 (assignment -> NUMBER .)
    COMMA           reduce using rule 20 (assignment -> NUMBER .)
    RAB             reduce using rule 20 (assignment -> NUMBER .)
    RSB             reduce using rule 20 (assignment -> NUMBER .)


state 35

    (21) assignment -> list .

    RRB             reduce using rule 21 (assignment -> list .)
    COMMA           reduce using rule 21 (assignment -> list .)
    RAB             reduce using rule 21 (assignment -> list .)
    RSB             reduce using rule 21 (assignment -> list .)


state 36

    (26) instruction -> slice_predicate SPM_ALOCATE LRB assignment . RRB
    (18) assignment -> assignment . COMMA assignment

    RRB             shift and go to state 60
    COMMA           shift and go to state 49


state 37

    (27) instruction -> slice_predicate SPM_FREE LRB assignment . RRB
    (18) assignment -> assignment . COMMA assignment

    RRB             shift and go to state 61
    COMMA           shift and go to state 49


state 38

    (37) instruction -> slice_predicate GEMM template_suffix LRB . assignment RRB
    (13) assignment -> . IDENTIFIER LSB assignment RSB
    (18) assignment -> . assignment COMMA assignment
    (19) assignment -> . empty
    (20) assignment -> . NUMBER
    (21) assignment -> . list
    (22) assignment -> . IDENTIFIER
    (23) assignment -> . IDENTIFIER ASSIGN expression
    (12) empty -> .
    (14) list -> . LSB bare_list RSB

    IDENTIFIER      shift and go to state 31
    NUMBER          shift and go to state 34
    RRB             reduce using rule 12 (empty -> .)
    COMMA           reduce using rule 12 (empty -> .)
    LSB             shift and go to state 32

    assignment                     shift and go to state 62
    empty                          shift and go to state 33
    list                           shift and go to state 35

state 39

    (30) instruction -> tma_predicate LOAD slice_suffix LRB . assignment RRB
    (13) assignment -> . IDENTIFIER LSB assignment RSB
    (18) assignment -> . assignment COMMA assignment
    (19) assignment -> . empty
    (20) assignment -> . NUMBER
    (21) assignment -> . list
    (22) assignment -> . IDENTIFIER
    (23) assignment -> . IDENTIFIER ASSIGN expression
    (12) empty -> .
    (14) list -> . LSB bare_list RSB

    IDENTIFIER      shift and go to state 31
    NUMBER          shift and go to state 34
    RRB             reduce using rule 12 (empty -> .)
    COMMA           reduce using rule 12 (empty -> .)
    LSB             shift and go to state 32

    assignment                     shift and go to state 63
    empty                          shift and go to state 33
    list                           shift and go to state 35

state 40

    (31) instruction -> tma_predicate LOAD DOT MULTICAST . LRB assignment RRB

    LRB             shift and go to state 64


state 41

    (29) slice_suffix -> DOT SLICE . DOT NUMBER

    DOT             shift and go to state 65


state 42

    (32) instruction -> tma_predicate STORE slice_suffix LRB . assignment RRB
    (13) assignment -> . IDENTIFIER LSB assignment RSB
    (18) assignment -> . assignment COMMA assignment
    (19) assignment -> . empty
    (20) assignment -> . NUMBER
    (21) assignment -> . list
    (22) assignment -> . IDENTIFIER
    (23) assignment -> . IDENTIFIER ASSIGN expression
    (12) empty -> .
    (14) list -> . LSB bare_list RSB

    IDENTIFIER      shift and go to state 31
    NUMBER          shift and go to state 34
    RRB             reduce using rule 12 (empty -> .)
    COMMA           reduce using rule 12 (empty -> .)
    LSB             shift and go to state 32

    assignment                     shift and go to state 66
    empty                          shift and go to state 33
    list                           shift and go to state 35

state 43

    (33) instruction -> tma_predicate STORE DOT MULTICAST . LRB assignment RRB

    LRB             shift and go to state 67


state 44

    (36) instruction -> MAKE_TENSOR template_suffix LRB assignment . RRB
    (18) assignment -> assignment . COMMA assignment

    RRB             shift and go to state 68
    COMMA           shift and go to state 49


state 45

    (34) template_suffix -> DOUBLE_COLON LAB assignment . RAB
    (18) assignment -> assignment . COMMA assignment

    RAB             shift and go to state 69
    COMMA           shift and go to state 49


state 46

    (35) template_suffix -> DOUBLE_COLON LAB NUMBER . D RAB
    (20) assignment -> NUMBER .

    D               shift and go to state 70
    RAB             reduce using rule 20 (assignment -> NUMBER .)
    COMMA           reduce using rule 20 (assignment -> NUMBER .)


state 47

    (24) slice_predicate -> SLICE DOT NUMBER DOT .

    CLAIM_BAR       reduce using rule 24 (slice_predicate -> SLICE DOT NUMBER DOT .)
    SPM_ALOCATE     reduce using rule 24 (slice_predicate -> SLICE DOT NUMBER DOT .)
    SPM_FREE        reduce using rule 24 (slice_predicate -> SLICE DOT NUMBER DOT .)
    GEMM            reduce using rule 24 (slice_predicate -> SLICE DOT NUMBER DOT .)


state 48

    (25) instruction -> slice_predicate CLAIM_BAR LRB assignment RRB .

    MAKE_TENSOR     reduce using rule 25 (instruction -> slice_predicate CLAIM_BAR LRB assignment RRB .)
    SLICE           reduce using rule 25 (instruction -> slice_predicate CLAIM_BAR LRB assignment RRB .)
    TMA             reduce using rule 25 (instruction -> slice_predicate CLAIM_BAR LRB assignment RRB .)
    $end            reduce using rule 25 (instruction -> slice_predicate CLAIM_BAR LRB assignment RRB .)


state 49

    (18) assignment -> assignment COMMA . assignment
    (13) assignment -> . IDENTIFIER LSB assignment RSB
    (18) assignment -> . assignment COMMA assignment
    (19) assignment -> . empty
    (20) assignment -> . NUMBER
    (21) assignment -> . list
    (22) assignment -> . IDENTIFIER
    (23) assignment -> . IDENTIFIER ASSIGN expression
    (12) empty -> .
    (14) list -> . LSB bare_list RSB

    IDENTIFIER      shift and go to state 31
    NUMBER          shift and go to state 34
    COMMA           reduce using rule 12 (empty -> .)
    RRB             reduce using rule 12 (empty -> .)
    RAB             reduce using rule 12 (empty -> .)
    RSB             reduce using rule 12 (empty -> .)
    LSB             shift and go to state 32

    assignment                     shift and go to state 71
    empty                          shift and go to state 33
    list                           shift and go to state 35

state 50

    (13) assignment -> IDENTIFIER LSB . assignment RSB
    (13) assignment -> . IDENTIFIER LSB assignment RSB
    (18) assignment -> . assignment COMMA assignment
    (19) assignment -> . empty
    (20) assignment -> . NUMBER
    (21) assignment -> . list
    (22) assignment -> . IDENTIFIER
    (23) assignment -> . IDENTIFIER ASSIGN expression
    (12) empty -> .
    (14) list -> . LSB bare_list RSB

    IDENTIFIER      shift and go to state 31
    NUMBER          shift and go to state 34
    RSB             reduce using rule 12 (empty -> .)
    COMMA           reduce using rule 12 (empty -> .)
    LSB             shift and go to state 32

    assignment                     shift and go to state 72
    empty                          shift and go to state 33
    list                           shift and go to state 35

state 51

    (23) assignment -> IDENTIFIER ASSIGN . expression
    (3) expression -> . term
    (4) expression -> . expression PLUS term
    (5) expression -> . expression MINUS term
    (17) expression -> . list
    (6) term -> . factor
    (7) term -> . term TIMES factor
    (8) term -> . term DIVIDE factor
    (14) list -> . LSB bare_list RSB
    (9) factor -> . NUMBER
    (10) factor -> . IDENTIFIER
    (11) factor -> . LRB expression RRB

    LSB             shift and go to state 32
    NUMBER          shift and go to state 57
    IDENTIFIER      shift and go to state 58
    LRB             shift and go to state 59

    expression                     shift and go to state 73
    term                           shift and go to state 54
    list                           shift and go to state 55
    factor                         shift and go to state 56

state 52

    (14) list -> LSB bare_list . RSB
    (16) bare_list -> bare_list . COMMA expression

    RSB             shift and go to state 74
    COMMA           shift and go to state 75


state 53

    (15) bare_list -> expression .
    (4) expression -> expression . PLUS term
    (5) expression -> expression . MINUS term

    RSB             reduce using rule 15 (bare_list -> expression .)
    COMMA           reduce using rule 15 (bare_list -> expression .)
    PLUS            shift and go to state 76
    MINUS           shift and go to state 77


state 54

    (3) expression -> term .
    (7) term -> term . TIMES factor
    (8) term -> term . DIVIDE factor

    PLUS            reduce using rule 3 (expression -> term .)
    MINUS           reduce using rule 3 (expression -> term .)
    RSB             reduce using rule 3 (expression -> term .)
    COMMA           reduce using rule 3 (expression -> term .)
    RRB             reduce using rule 3 (expression -> term .)
    RAB             reduce using rule 3 (expression -> term .)
    TIMES           shift and go to state 78
    DIVIDE          shift and go to state 79


state 55

    (17) expression -> list .

    PLUS            reduce using rule 17 (expression -> list .)
    MINUS           reduce using rule 17 (expression -> list .)
    RSB             reduce using rule 17 (expression -> list .)
    COMMA           reduce using rule 17 (expression -> list .)
    RRB             reduce using rule 17 (expression -> list .)
    RAB             reduce using rule 17 (expression -> list .)


state 56

    (6) term -> factor .

    TIMES           reduce using rule 6 (term -> factor .)
    DIVIDE          reduce using rule 6 (term -> factor .)
    PLUS            reduce using rule 6 (term -> factor .)
    MINUS           reduce using rule 6 (term -> factor .)
    RSB             reduce using rule 6 (term -> factor .)
    COMMA           reduce using rule 6 (term -> factor .)
    RRB             reduce using rule 6 (term -> factor .)
    RAB             reduce using rule 6 (term -> factor .)


state 57

    (9) factor -> NUMBER .

    TIMES           reduce using rule 9 (factor -> NUMBER .)
    DIVIDE          reduce using rule 9 (factor -> NUMBER .)
    PLUS            reduce using rule 9 (factor -> NUMBER .)
    MINUS           reduce using rule 9 (factor -> NUMBER .)
    RSB             reduce using rule 9 (factor -> NUMBER .)
    COMMA           reduce using rule 9 (factor -> NUMBER .)
    RRB             reduce using rule 9 (factor -> NUMBER .)
    RAB             reduce using rule 9 (factor -> NUMBER .)


state 58

    (10) factor -> IDENTIFIER .

    TIMES           reduce using rule 10 (factor -> IDENTIFIER .)
    DIVIDE          reduce using rule 10 (factor -> IDENTIFIER .)
    PLUS            reduce using rule 10 (factor -> IDENTIFIER .)
    MINUS           reduce using rule 10 (factor -> IDENTIFIER .)
    RSB             reduce using rule 10 (factor -> IDENTIFIER .)
    COMMA           reduce using rule 10 (factor -> IDENTIFIER .)
    RRB             reduce using rule 10 (factor -> IDENTIFIER .)
    RAB             reduce using rule 10 (factor -> IDENTIFIER .)


state 59

    (11) factor -> LRB . expression RRB
    (3) expression -> . term
    (4) expression -> . expression PLUS term
    (5) expression -> . expression MINUS term
    (17) expression -> . list
    (6) term -> . factor
    (7) term -> . term TIMES factor
    (8) term -> . term DIVIDE factor
    (14) list -> . LSB bare_list RSB
    (9) factor -> . NUMBER
    (10) factor -> . IDENTIFIER
    (11) factor -> . LRB expression RRB

    LSB             shift and go to state 32
    NUMBER          shift and go to state 57
    IDENTIFIER      shift and go to state 58
    LRB             shift and go to state 59

    expression                     shift and go to state 80
    term                           shift and go to state 54
    list                           shift and go to state 55
    factor                         shift and go to state 56

state 60

    (26) instruction -> slice_predicate SPM_ALOCATE LRB assignment RRB .

    MAKE_TENSOR     reduce using rule 26 (instruction -> slice_predicate SPM_ALOCATE LRB assignment RRB .)
    SLICE           reduce using rule 26 (instruction -> slice_predicate SPM_ALOCATE LRB assignment RRB .)
    TMA             reduce using rule 26 (instruction -> slice_predicate SPM_ALOCATE LRB assignment RRB .)
    $end            reduce using rule 26 (instruction -> slice_predicate SPM_ALOCATE LRB assignment RRB .)


state 61

    (27) instruction -> slice_predicate SPM_FREE LRB assignment RRB .

    MAKE_TENSOR     reduce using rule 27 (instruction -> slice_predicate SPM_FREE LRB assignment RRB .)
    SLICE           reduce using rule 27 (instruction -> slice_predicate SPM_FREE LRB assignment RRB .)
    TMA             reduce using rule 27 (instruction -> slice_predicate SPM_FREE LRB assignment RRB .)
    $end            reduce using rule 27 (instruction -> slice_predicate SPM_FREE LRB assignment RRB .)


state 62

    (37) instruction -> slice_predicate GEMM template_suffix LRB assignment . RRB
    (18) assignment -> assignment . COMMA assignment

    RRB             shift and go to state 81
    COMMA           shift and go to state 49


state 63

    (30) instruction -> tma_predicate LOAD slice_suffix LRB assignment . RRB
    (18) assignment -> assignment . COMMA assignment

    RRB             shift and go to state 82
    COMMA           shift and go to state 49


state 64

    (31) instruction -> tma_predicate LOAD DOT MULTICAST LRB . assignment RRB
    (13) assignment -> . IDENTIFIER LSB assignment RSB
    (18) assignment -> . assignment COMMA assignment
    (19) assignment -> . empty
    (20) assignment -> . NUMBER
    (21) assignment -> . list
    (22) assignment -> . IDENTIFIER
    (23) assignment -> . IDENTIFIER ASSIGN expression
    (12) empty -> .
    (14) list -> . LSB bare_list RSB

    IDENTIFIER      shift and go to state 31
    NUMBER          shift and go to state 34
    RRB             reduce using rule 12 (empty -> .)
    COMMA           reduce using rule 12 (empty -> .)
    LSB             shift and go to state 32

    assignment                     shift and go to state 83
    empty                          shift and go to state 33
    list                           shift and go to state 35

state 65

    (29) slice_suffix -> DOT SLICE DOT . NUMBER

    NUMBER          shift and go to state 84


state 66

    (32) instruction -> tma_predicate STORE slice_suffix LRB assignment . RRB
    (18) assignment -> assignment . COMMA assignment

    RRB             shift and go to state 85
    COMMA           shift and go to state 49


state 67

    (33) instruction -> tma_predicate STORE DOT MULTICAST LRB . assignment RRB
    (13) assignment -> . IDENTIFIER LSB assignment RSB
    (18) assignment -> . assignment COMMA assignment
    (19) assignment -> . empty
    (20) assignment -> . NUMBER
    (21) assignment -> . list
    (22) assignment -> . IDENTIFIER
    (23) assignment -> . IDENTIFIER ASSIGN expression
    (12) empty -> .
    (14) list -> . LSB bare_list RSB

    IDENTIFIER      shift and go to state 31
    NUMBER          shift and go to state 34
    RRB             reduce using rule 12 (empty -> .)
    COMMA           reduce using rule 12 (empty -> .)
    LSB             shift and go to state 32

    assignment                     shift and go to state 86
    empty                          shift and go to state 33
    list                           shift and go to state 35

state 68

    (36) instruction -> MAKE_TENSOR template_suffix LRB assignment RRB .

    MAKE_TENSOR     reduce using rule 36 (instruction -> MAKE_TENSOR template_suffix LRB assignment RRB .)
    SLICE           reduce using rule 36 (instruction -> MAKE_TENSOR template_suffix LRB assignment RRB .)
    TMA             reduce using rule 36 (instruction -> MAKE_TENSOR template_suffix LRB assignment RRB .)
    $end            reduce using rule 36 (instruction -> MAKE_TENSOR template_suffix LRB assignment RRB .)


state 69

    (34) template_suffix -> DOUBLE_COLON LAB assignment RAB .

    LRB             reduce using rule 34 (template_suffix -> DOUBLE_COLON LAB assignment RAB .)


state 70

    (35) template_suffix -> DOUBLE_COLON LAB NUMBER D . RAB

    RAB             shift and go to state 87


state 71
